Refactored queries and renamed endpoint
